Adjusted image size

--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@ header > p {
 .meme {
     position: relative;
     width: 90%;
+    max-width: 800px;
     margin: auto;
 }
 
@@ -47,7 +48,7 @@ header > p {
     margin: 15px 0;
     padding: 0 5px;
     font-family: impact, sans-serif;
-    font-size: 2em;
+    font-size: 2.1em;
     text-transform: uppercase;
     color: white;
     letter-spacing: 1px;
@@ -72,6 +73,7 @@ header > p {
 
 .meme-form {
     width: 90%;
+    max-width: 800px;
     margin: 20px auto;
     display: flex;
     justify-content: space-between;
